# adarkhs

./: .gitignore  adarkhs.cabal  deploy.sh  stack-ghcjs.yaml  stack.yaml
css/: style.css
src/: Main.hs  State.hs  Utils.hs  Widgets.hs
