name:                adarkhs
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
author:              Shaun Ren
maintainer:          shaun.ren@linux.com
build-type:          Simple
cabal-version:       >=1.10

flag debug
  description: Enable debug support
  default:     False

executable adarkhs
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       State, Utils, Widgets
  build-depends:       base >=4.9 && <4.10
                     , containers >=0.5.7 && <0.6
                     , text >=1 && <2
                     , text-show >=3 && <4
                     , cases >=0.1.3 && <0.2
                     , lens >=4 && <5
                     , data-default >=0.7 && <1
                     , file-embed >=0.0.9 && <0.0.11
                     , aeson >=1 && <1.3
                     , mtl >=2.2 && <3
                     , random >=1.1 && <1.2
                     , MonadRandom >=0.5 && <0.6
                     , strict-writer >=0.4 && <0.5
                     , time >=1.6 && <2

                     , jsaddle-dom ==0.9.2.0
                     , jsaddle ==0.9.3.0
                     , reflex ==0.5
                     , reflex-dom ==0.4
                     , reflex-dom-core ==0.4
                     , reflex-dom-contrib ==0.5.1.0
                     , classy-prelude
                     , string-conv
  default-language:    Haskell2010

  if impl(ghcjs)
    ghc-options:    -Wall -Wno-unused-do-bind -O2 -dedupe
  else
    ghc-options:    -Wall -Wno-unused-do-bind -O2

  if flag(debug)
    cpp-options:    -DDEBUG